Fixes #31295 - Table pagination in react has extra space

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -228,7 +228,7 @@ select {
 }
 
 table.table {
-  margin-bottom: 6px;
+  margin-bottom: 0;
 }
 
 table {
